--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.2.3"
+    "mongoose": "^7.2.3",
+    "node-cron": "^3.0.2"
   }
 }
